Initial draft of Mantak Chia in SF.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<!-- navbar -->
 		<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
 			<h1><a class="navbar-brand text-white font-weight-bold" href="index.html">
-				Mantak Chia
+				Meditation
 				</a></h1>
 
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -64,27 +64,26 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</a>
 					</li>
 					<li class="nav-item mr-lg-2 mb-lg-0 mb-2">
+						<a class="nav-link" href="ticket.html">Tickets</a>
+					</li>
+					<!-- <li class="nav-item mr-lg-2 mb-lg-0 mb-2">
 						<a class="nav-link" href="about.html">About Us</a>
-					</li>
+					</li> -->
+					<!-- <li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+							aria-expanded="false">
+							Pages
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<a class="dropdown-item" href="about.html">Team</a>
+							<a class="dropdown-item" href="typo.html">Typography</a>
+							<a class="dropdown-item" href="gallery.html">Gallery</a>
+
+						</div>
+					</li> -->
 
 					<li class="nav-item mr-lg-2 mb-lg-0 mb-2">
-						<a class="nav-link" href="tours.html">Tours</a>
-					</li>
-					<li class="nav-item dropdown">
-								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-								    aria-expanded="false">
-									Pages
-								</a>
-								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-									<a class="dropdown-item" href="about.html">Team</a>
-									<a class="dropdown-item" href="typo.html">Typography</a>
-									<a class="dropdown-item" href="gallery.html">Gallery</a>
-
-								</div>
-							</li>
-
-					<li class="nav-item mr-lg-2 mb-lg-0 mb-2">
-						<a class="nav-link" href="gallery.html">Gallery</a>
+						<a class="nav-link" href="resource.html">Resources</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="contact.html">Contact Us</a>
@@ -96,7 +95,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</header>
 	<!-- //header -->
 <!-- banner -->
-	<!-- <div class="banner-agile">
+	<div class="banner-agile">
 		<ul class="slider">
 			<li class="active">
 				<div class="banner-w3ls-1">
@@ -128,15 +127,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</ul>
 		<div class="banner-text-posi-w3ls">
 			<div class="banner-text-whtree">
-				<h3 class="text-capitalize text-white text-center p-4">Experience Your True Body and Mind
+				<h3 class="text-capitalize text-white text-center p-4">With Mantak Chia in the Silicon Valley
 				</h3>
-				<p class="px-4 py-3 text-center text-white mx-auto">Three workshops and six days with Master Mantak Chia in the Silicon Valley in June 2019.</p>
+				<h4 class="px-4 py-3 text-center text-white mx-auto">May 31-June 6, 2019. Three workshops in six days.</h4>
 			</div>
 		</div>
-	</div> -->
+	</div>
 	<!-- //banner -->
 	<!-- services -->
-<!-- <section class="services py-5">
+<section class="services py-5">
 	<div class="container py-md-4 mt-md-3">
 		<div class="wthree_head_section">
 			<h2 class="w3l_header"><span>Workshops</span></h2>
@@ -145,8 +144,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="col-md-4 w3layouts_news_left_grid1">
 				<div class="new_top text-center">
 					<i class="fas fa-star"></i>
-					<h3 class="mb-3 mt-3">AWAKENING HEALING LIGHT</h3>
-					<p>Awakening Healing Light of the Tao, Back to the Body's Wisdom</p>
+					<h3 class="mb-3 mt-3">AWAKENING HEALING LIGHT
+					OF THE TAO, BACK TO THE BODY'S WISDOM</h3>
 					<p>Sat Jun 1-Sun Jun 2, 2019</p>
 					<p>9:30am-5:00pm</p>
 				</div>
@@ -154,9 +153,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="col-md-4 w3layouts_news_left_grid2">
 				<div class="new_top text-center">
 					<i class="fas fa-heart"></i>
-					<h3 class="mb-3 mt-3">LOVING ENERGY</h3>
-					<p>Loving Energy that Heals</p>
-					<p></p>
+					<h3 class="mb-3 mt-3">LOVING ENERGY THAT HEALS</h3>
 					<p>Mon Jun 3-Tue Jun 4, 2019</p>
 					<p>9:30am-5:00pm</p>
 				</div>
@@ -164,52 +161,60 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="col-md-4 w3layouts_news_left_grid3">
 				<div class="new_top text-center">
 					<i class="fas fa-sync-alt"></i>
-					<h3 class="mb-3 mt-3">FUSION & BRAIN</h3>
-					<p>Fusion of Five Elements & Brain Wisdom Qigong</p>
+					<h3 class="mb-3 mt-3">
+					FUSION OF FIVE ELEMENTS & BRAIN WISDOM</h3>
 					<p>Wed Jun 5-Thu Jun 6, 2019</p>
 					<p>9:30am-5:00pm</p>
 				</div>
 			</div>
 		</div>
+		<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
+			<div class="new_top text-center">
+				<i class="fas fa-dot-circle"></i>
+				<h3 class="mb-3 mt-3">INTRODUCTION SEMINAR</h3>
+				<p>Fri May 31, 2019</p>
+				<p>7:00-9:00pm</p>
+			</div>
+		</div>
 	</div>
-</section> -->
+</section>
 <!-- //services -->
 	<!-- choose -->
-<!-- <section class="choose py-5">
+<section class="choose py-5">
 	<div class="container py-md-4 mt-md-3">
 		<div class="wthree_head_section">
 			<h3 class="w3l_header text-white">Awakening <span class="text-white">Healing Light of the Tao, Back to the Body's Wisdom</span></h3>
 		</div>
 		<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
 			<div class="choose_top text-center">
-				<p>In the first workshop, Master Mantak Chia teaches the basics of Taoist meditation. He guides and helps you activate the inner flow of your life energy, opening up your microcosmic orbit. This inner energy generates and radiates healing power inside your body. Afterwords, he leads you to go back to your body's wisdom which is activated and developed by Inner Smile--smiling to your organs in the creating cycle. This nature wisdom will make your organs healthy and strong and grow your soul spirit. In addition, he teaches the Six Healing Sound, which is the the emotional wisdom that gives you control of your emtions which would otherwise be difficult to manage.</p>
+				<p>In this workshop, Master Chia teaches fundamental practices of Taoist meditation. He guides you through each step and helps you activate the internal flow of your life energy, opening up your microcosmic orbit. This inner energy flow radiates and generates healing power inside your body. Afterward, he leads you to go back to your body's wisdom which is activated and developed by Inner Smile--smiling to your organs in the creating cycle. This natural wisdom will make your organs healthy and strong and grow your soul spirit. Besides, he teaches the Six Healing Sounds, which is the emotional wisdom that gives you control of your emotions which would otherwise be difficult to manage.</p>
 			</div>
 		</div>
 	</div>
-</section> -->
+</section>
 <!-- //choose -->
 <!-- packages -->
-<!-- <section class="packages py-5">
+<section class="packages py-5">
 	<div class="container py-md-4 mt-md-3">
 		<div class="wthree_head_section">
 			<h3 class="w3l_header">Loving <span>Energy that Heals</span></h3>
 		</div>
 		<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
 				<div class="row choose_top text-center">
-					<p>Mantak Chia has been famous for teaching Healing Love for decades since 1970s. Take this rare occasion to learn from the legendary master face-to-face. Love-making generates tremendous life energy, which normal people have no way to control. He teaches you how to manage your sexual power and transform it into incredible healing energy flowing through your body that blows up your sensory nerves. In this workshop, he guides you through the process of balancing Yin and Yang, ranging from connecting the sexual power with emotional love to harnessing reproductive energy from both male and female.</p>
+					<p>Mantak Chia has been famous for teaching Healing Love for decades since the 1970s. Take this opportunity to learn these practices that were once mysterious from the legendary master face-to-face. Love-making or sexual behavior generates tremendous life energy, which ordinary people have no way to control. He teaches you how to manage your sexual power and transform it into incredible healing energy that flows through your body and blows up your sensory nerves. In this workshop, he guides you through the process of balancing Yin and Yang, ranging from connecting the sexual power with universal human love to harnessing sexual energy from both male and female.</p>
 				</div>
 		</div>
 	</div>
-</section> -->
+</section>
 <!-- //packages -->
 <section class="testimonials py-5">
 	<div class="container py-md-4 mt-md-3">
 		<div class="wthree_head_section">
-			<h3 class="w3l_header text-white">Fusion of <span class="text-white">Five Elements & Brain Wisdom Qigong</span></h3>
+			<h3 class="w3l_header text-white">Fusion of <span class="text-white">Five Elements & Brain Wisdom</span></h3>
 		</div>
 		<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
 			<div class="choose_top text-center">
-				<p>Your energy centers vibrate and your energy channels are open after four days of practice with Master Chia. Now, it is time for advanced meditation that fuses all types of energy inside and outside of your body, and use them to activate your brain.</p>
+				<p>Your energy centers vibrate, and your energy channels are open after four days of practices with Master Chia. Now, it is time for advanced meditation that fuses all types of energy inside and outside of your body, and use them to activate your brain. Fusion of Five Elements is one of the best Taoist practices that balance all essential energies in your body, dissolving both psychological conflicts and physiological imbalance. It brings all types of internal energy into harmonious forces and prepares for advanced Qi cultivation and transformation. Also, he teaches you how to use the balanced power to awaken the wisdom of your brain, which is the result of seemingly intuitive brain activities, not the outcome of conventional logic thinking.</p>
 			</div>
 		</div>
 	</div>
@@ -286,7 +291,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 </section> -->
 <!-- //testimonials -->
 <!-- news -->
-	<section class="wthree-row w3-about py-5">
+	<!-- <section class="wthree-row w3-about py-5">
 		<div class="container py-md-4 mt-md-3">
 			<div class="wthree_head_section">
 				<h3 class="w3l_header">Related <span>Tours</span></h3>
@@ -318,10 +323,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				  </div>
 				</div>
             </div>
-        </section>
+        </section> -->
 <!-- //news -->
 <!--footer-->
-	<footer>
+	<!-- <footer>
 		<div class="container py-md-4 mt-md-3">
 			<div class="row footer-top-w3layouts-agile py-5">
 				<div class="col-lg-3 col-md-6 col-sm-6 footer-grid">
@@ -415,7 +420,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 			</div>
 		</div>
-	</footer>
+	</footer> -->
 	<!---->
 	<div class="copyright py-3">
 		<div class="container">
@@ -447,8 +452,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</ul>
 			</div>
 			<div class="copyrightbottom">
-				<p>© 2018 Venture. All Rights Reserved | Design by
-					<a href="http://w3layouts.com/">W3layouts</a>
+				<p>© 2018 Inner Meditation
 				</p>
 			</div>
 			<div class="clearfix"></div>
@@ -456,7 +460,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</div>
 <!-- //footer -->
 <!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+<!-- <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -477,7 +481,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
       </div>
     </div>
   </div>
-</div>
+</div> -->
 <!-- //Modal -->
 	<!-- Js files -->
 	<!-- JavaScript -->
