--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</ul>
 		<div class="banner-text-posi-w3ls">
 			<div class="banner-text-whtree">
-				<h3 class="text-capitalize text-white text-center p-4">With Mantak Chia in the Silicon Valley
+				<h3 class="text-capitalize text-white text-center p-4">With Mantak Chia in Silicon Valley
 				</h3>
-				<h4 class="px-4 py-3 text-center text-white mx-auto">May 31-June 6, 2019. Three workshops in six days.</h4>
+				<h4 class="px-4 py-3 text-center text-white mx-auto">May 31-June 6, 2019. One introductory seminar and three workshops.</h4>
 			</div>
 		</div>
 	</div>
@@ -141,7 +141,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<h2 class="w3l_header"><span>Workshops</span></h2>
 		</div>
 		<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
-			<div class="col-md-4 w3layouts_news_left_grid1">
+			<div class="col-md-6 agile-info_packages_left1">
+				<div class="new_top text-center">
+					<i class="fas fa-dot-circle"></i>
+					<h3 class="mb-3 mt-3">INTRODUCTORY SEMINAR</h3>
+					<p>Fri May 31, 2019</p>
+					<p>7:00-9:00pm</p>
+				</div>
+			</div>
+			<div class="col-md-6 agile-info_packages_left2">
 				<div class="new_top text-center">
 					<i class="fas fa-star"></i>
 					<h3 class="mb-3 mt-3">AWAKENING HEALING LIGHT
@@ -150,7 +158,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<p>9:30am-5:00pm</p>
 				</div>
 			</div>
-			<div class="col-md-4 w3layouts_news_left_grid2">
+		</div>
+		<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
+			<div class="col-md-6 agile-info_packages_left1">
 				<div class="new_top text-center">
 					<i class="fas fa-heart"></i>
 					<h3 class="mb-3 mt-3">LOVING ENERGY THAT HEALS</h3>
@@ -158,7 +168,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<p>9:30am-5:00pm</p>
 				</div>
 			</div>
-			<div class="col-md-4 w3layouts_news_left_grid3">
+			<div class="col-md-6 agile-info_packages_left2">
 				<div class="new_top text-center">
 					<i class="fas fa-sync-alt"></i>
 					<h3 class="mb-3 mt-3">
@@ -166,14 +176,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<p>Wed Jun 5-Thu Jun 6, 2019</p>
 					<p>9:30am-5:00pm</p>
 				</div>
-			</div>
-		</div>
-		<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
-			<div class="new_top text-center">
-				<i class="fas fa-dot-circle"></i>
-				<h3 class="mb-3 mt-3">INTRODUCTION SEMINAR</h3>
-				<p>Fri May 31, 2019</p>
-				<p>7:00-9:00pm</p>
 			</div>
 		</div>
 	</div>
@@ -212,216 +214,29 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="wthree_head_section">
 			<h3 class="w3l_header text-white">Fusion of <span class="text-white">Five Elements & Brain Wisdom</span></h3>
 		</div>
+		<!-- <div class="row about-tp mt-md-5 pt-4"> -->
 		<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
-			<div class="choose_top text-center">
+			<!-- <div class="col-lg-6 welcome-left"> -->
+			<!-- <div class="col-md-6 agile-info_packages_left1 choose_top"> -->
+			<div class="choose_top">
+				<div>
 				<p>Your energy centers vibrate, and your energy channels are open after four days of practices with Master Chia. Now, it is time for advanced meditation that fuses all types of energy inside and outside of your body, and use them to activate your brain. Fusion of Five Elements is one of the best Taoist practices that balance all essential energies in your body, dissolving both psychological conflicts and physiological imbalance. It brings all types of internal energy into harmonious forces and prepares for advanced Qi cultivation and transformation. Also, he teaches you how to use the balanced power to awaken the wisdom of your brain, which is the result of seemingly intuitive brain activities, not the outcome of conventional logic thinking.</p>
+				</div>
+				<div class="col-lg-6 welcome-right">
+					<div class="welcome-right-top">
+						<img src="images/EnergyTao.jpg" alt="" class="img-fluid" width="75%" height="75%">
+					</div>
+				</div>
 			</div>
-		</div>
+			<!-- <div class="col-lg-6 welcome-right">
+				<div class="welcome-right-top">
+					<img src="images/EnergyTao.jpg" alt="" class="img-fluid">
+				</div>
+			</div> -->
+	</div>
 	</div>
 </section>
 
-<!-- testimonials -->
-<!-- <section class="testimonials py-5">
-		<div class="container py-md-4 mt-md-3">
-			<div class="wthree_head_section">
-				<h3 class="w3l_header text-white">Fusion of <span class="text-white">Five Elements & Brain Wisdom Qigong</span></h3>
-			</div>
-		<div class="agile_testimonials_grids mt-md-5 pt-4">
-			<ul id="flexiselDemo1">
-				<li>
-					<div class="agile_testimonials_grid">
-						<div class="agile_testimonials_grid1">
-							<div class="w3_agile_testimonials_grid_right test-tooltip1">
-								 <p>Vivamus sed porttitor felis. Pellentesque habitant morbi tristique senectus et netus et
-								malesuada fames ac turpis egestas.Sed lorem enim, .</p>
-							</div>
-							<div class="w3_agile_testimonials_grid">
-								<div class="w3_agile_testimonials_grid_left">
-									<img src="images/t2.jpg" alt=" " class="img-responsive" />
-								</div>
-								<div class="tex-t">
-									<h4>Steve Smith</h4>
-								</div>
-								<div class="clearfix"></div>
-							</div>
-						</div>
-					</div>
-				</li>
-				<li>
-					<div class="agile_testimonials_grid">
-						<div class="agile_testimonials_grid1">
-							<div class="w3_agile_testimonials_grid_right test-tooltip1">
-								 <p>Vivamus sed porttitor felis. Pellentesque habitant morbi tristique senectus et netus et
-								malesuada fames ac turpis egestas.Sed lorem enim, .</p>
-							</div>
-							<div class="w3_agile_testimonials_grid">
-								<div class="w3_agile_testimonials_grid_left">
-									<img src="images/t4.jpg" alt=" " class="img-fluid" />
-								</div>
-								<div class="tex-t">
-									<h4>Shane Watson</h4>
-								</div>
-								<div class="clearfix"></div>
-							</div>
-						</div>
-					</div>
-				</li>
-				<li>
-					<div class="agile_testimonials_grid">
-						<div class="agile_testimonials_grid1">
-							<div class="w3_agile_testimonials_grid_right test-tooltip1">
-								 <p>Vivamus sed porttitor felis. Pellentesque habitant morbi tristique senectus et netus et
-								malesuada fames ac turpis egestas.Sed lorem enim, .</p>
-							</div>
-							<div class="w3_agile_testimonials_grid">
-								<div class="w3_agile_testimonials_grid_left">
-									<img src="images/t1.jpg" alt=" " class="img-fluid" />
-								</div>
-								<div class="tex-t">
-									<h4>Shane Rosey</h4>
-								</div>
-								<div class="clearfix"></div>
-							</div>
-						</div>
-					</div>
-				</li>
-			</ul>
-		</div>
-	</div>
-</section> -->
-<!-- //testimonials -->
-<!-- news -->
-	<!-- <section class="wthree-row w3-about py-5">
-		<div class="container py-md-4 mt-md-3">
-			<div class="wthree_head_section">
-				<h3 class="w3l_header">Related <span>Tours</span></h3>
-			</div>
-			<div class="card-deck mt-md-5 pt-4">
-				  <div class="card">
-					<img src="images/g7.jpg" class="img-fluid" alt="Card image cap">
-					<div class="card-body w3ls-card">
-					  <h5 class="card-title">AUSTRALIA</h5>
-					  <p class="card-text mb-3 ">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-						<a href="#" class="btn btn-primary" data-toggle="modal" data-target="#myModal">View Details</a>
-					</div>
-				  </div>
-				  <div class="card">
-					<img src="images/g6.jpg" class="img-fluid" alt="Card image cap">
-					<div class="card-body w3ls-card">
-					  <h5 class="card-title">NEWYORK</h5>
-					   <p class="card-text mb-3 ">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-						<a href="#" class="btn btn-primary" data-toggle="modal" data-target="#myModal">View Details</a>
-					</div>
-				  </div>
-				  <div class="card">
-					<img src="images/g8.jpg" class="img-fluid" alt="Card image cap">
-					<div class="card-body w3ls-card">
-					  <h5 class="card-title">PARIS</h5>
-					   <p class="card-text mb-3">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-						<a href="#" class="btn btn-primary" data-toggle="modal" data-target="#myModal">View Details</a>
-					</div>
-				  </div>
-				</div>
-            </div>
-        </section> -->
-<!-- //news -->
-<!--footer-->
-	<!-- <footer>
-		<div class="container py-md-4 mt-md-3">
-			<div class="row footer-top-w3layouts-agile py-5">
-				<div class="col-lg-3 col-md-6 col-sm-6 footer-grid">
-					<div class="footer-title">
-						<h3>About Us</h3>
-					</div>
-					<div class="footer-text">
-						<p>Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. lacinia eget consectetur sed, convallis at tellus..</p>
-
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-6 col-sm-6 footer-grid">
-					<div class="footer-title">
-						<h3>Contact Us</h3>
-					</div>
-					<div class="contact-info">
-					<h4>Location :</h4>
-					<p>0926k 4th block building, king Avenue, New York City.</p>
-					<div class="phone">
-						<h4>Phone :</h4>
-						<p>Phone : +121 098 8907 9987</p>
-						<p>Email : <a href="mailto:info@example.com">info@example.com</a></p>
-					</div>
-				</div>
-				</div>
-				<div class="col-lg-3 col-md-6 col-sm-6 footer-grid">
-					<div class="footer-title">
-						<h3>Recent Posts</h3>
-					</div>
-					<div class="footer-list">
-						<div class="flickr-grid">
-							<a href="#" data-toggle="modal" data-target="#myModal">
-								<img src="images/g1.jpg" class="img-fluid" alt=" ">
-							</a>
-						</div>
-						<div class="flickr-grid">
-							<a href="#" data-toggle="modal" data-target="#myModal">
-								<img src="images/g2.jpg" class="img-fluid" alt=" ">
-							</a>
-						</div>
-						<div class="flickr-grid">
-							<a href="#" data-toggle="modal" data-target="#myModal">
-								<img src="images/g3.jpg" class="img-fluid" alt=" ">
-							</a>
-						</div>
-						<div class="flickr-grid">
-							<a href="#" data-toggle="modal" data-target="#myModal">
-								<img src="images/g4.jpg" class="img-fluid" alt=" ">
-							</a>
-						</div>
-						<div class="flickr-grid">
-							<a href="#" data-toggle="modal" data-target="#myModal">
-								<img src="images/g5.jpg" class="img-fluid" alt=" ">
-							</a>
-						</div>
-						<div class="flickr-grid">
-							<a href="#" data-toggle="modal" data-target="#myModal">
-								<img src="images/g6.jpg" class="img-fluid" alt=" ">
-							</a>
-						</div>
-						<div class="flickr-grid">
-							<a href="#" data-toggle="modal" data-target="#myModal">
-								<img src="images/g7.jpg" class="img-fluid" alt=" ">
-							</a>
-						</div>
-						<div class="flickr-grid">
-							<a href="#" data-toggle="modal" data-target="#myModal">
-								<img src="images/g9.jpg" class="img-fluid" alt=" ">
-							</a>
-						</div>
-						<div class="flickr-grid">
-							<a href="#" data-toggle="modal" data-target="#myModal">
-								<img src="images/g8.jpg" class="img-fluid" alt=" ">
-							</a>
-						</div>
-						<div class="clearfix"></div>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-6 col-sm-6 footer-grid">
-					<div class="footer-title">
-						<h3>Subscribe</h3>
-					</div>
-					<p>Vivamus magna justo, lacinia eget consectetur sed.</p>
-					<form action="#" method="post" class="newsletter">
-						<input class="email" type="email" placeholder="Your email..." required="">
-						<button class="btn1">
-							<i class="far fa-envelope"></i>
-						</button>
-					</form>
-					<div class="clearfix"></div>
-				</div>
-			</div>
-		</div>
-	</footer> -->
-	<!---->
 	<div class="copyright py-3">
 		<div class="container">
 			<div class="copyrighttop">
@@ -459,30 +274,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 	</div>
 <!-- //footer -->
-<!-- Modal -->
-<!-- <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title">Venture</h4>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-		 <div class="agileits-w3layouts-info">
-			<img src="images/g6.jpg" class="img-fluid" alt="" />
-			<p>Duis venenatis, turpis eu bibendum porttitor, sapien quam ultricies tellus, ac rhoncus risus odio eget nunc. Pellentesque ac fermentum diam. Integer eu facilisis nunc, a iaculis felis. Pellentesque pellentesque tempor enim, in dapibus turpis porttitor quis. </p>
-		</div>
-	</div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div> -->
-<!-- //Modal -->
+
 	<!-- Js files -->
 	<!-- JavaScript -->
 	<script src="js/jquery-2.2.3.min.js"></script>
