--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="banner-text-whtree">
 				<h3 class="text-capitalize text-white text-center p-4">With Mantak Chia in Silicon Valley
 				</h3>
-				<h4 class="px-4 py-3 text-center text-white mx-auto">May 31-June 6, 2019. One introductory seminar and three workshops.</h4>
+				<h4 class="px-4 py-3 text-center text-white mx-auto">May 31-June 6, 2019. One seminar and three workshops.</h4>
 			</div>
 		</div>
 	</div>
@@ -144,7 +144,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="col-md-6 agile-info_packages_left1">
 				<div class="new_top text-center">
 					<i class="fas fa-dot-circle"></i>
-					<h3 class="mb-3 mt-3">INTRODUCTORY SEMINAR</h3>
+					<h3 class="mb-3 mt-3">INTRODUCTION SEMINAR</h3>
 					<p>Fri May 31, 2019</p>
 					<p>7:00-9:00pm</p>
 				</div>
