--- a/index.html
+++ b/index.html
@@ -185,11 +185,21 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <section class="choose py-5">
 	<div class="container py-md-4 mt-md-3">
 		<div class="wthree_head_section">
-			<h3 class="w3l_header text-white">Awakening <span class="text-white">Healing Light of the Tao, Back to the Body's Wisdom</span></h3>
+			<h3 class="w3l_header text-white">Awakening <span class="text-white">the Healing Light of the Tao, Back to the Body's Wisdom</span></h3>
 		</div>
 		<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
 			<div class="choose_top text-center">
-				<p>In this workshop, Master Chia teaches fundamental practices of Taoist meditation. He guides you through each step and helps you activate the internal flow of your life energy, opening up your microcosmic orbit. This inner energy flow radiates and generates healing power inside your body. Afterward, he leads you to go back to your body's wisdom which is activated and developed by Inner Smile--smiling to your organs in the creating cycle. This natural wisdom will make your organs healthy and strong and grow your soul spirit. Besides, he teaches the Six Healing Sounds, which is the emotional wisdom that gives you control of your emotions which would otherwise be difficult to manage.</p>
+				<p>In this workshop, Master Chia will teach fundamental practices of Taoist meditation.
+					He will guide you through each step and help you activate the internal flow of
+					your life energy, opening up your microcosmic orbit
+					(this inner energy flow radiates and generates healing power inside your body).
+					Afterward, he will lead you back to your body's wisdom which is activated
+					and developed by Inner Smile -- smiling to your organs in the creating cycle.
+					This natural wisdom will make your organs healthy and strong while growing your
+					soul spirit.
+					In addition, he will teach the Six Healing Sounds, which is the emotional wisdom
+					that gives you control of your emotions which would otherwise be difficult
+					to manage.</p>
 			</div>
 		</div>
 	</div>
@@ -203,7 +213,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 		<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
 				<div class="row choose_top text-center">
-					<p>Mantak Chia has been famous for teaching Healing Love for decades since the 1970s. Take this opportunity to learn these practices that were once mysterious from the legendary master face-to-face. Love-making or sexual behavior generates tremendous life energy, which ordinary people have no way to control. He teaches you how to manage your sexual power and transform it into incredible healing energy that flows through your body and blows up your sensory nerves. In this workshop, he guides you through the process of balancing Yin and Yang, ranging from connecting the sexual power with universal human love to harnessing sexual energy from both male and female.</p>
+					<p>Mantak Chia has been famous for teaching Healing Love for decades
+					since the 1970s.
+					Take this opportunity to learn these practices that were once mysterious from
+					the legendary master,  face-to-face.
+					Love-making or sexual behavior generates tremendous life energy,
+					which ordinary people have no way to control.
+					He will teach you how to manage your sexual power and transform it into
+					incredible healing energy that flows through your body and opens up your
+					sensory nerves and Qi channels.
+					In this workshop, he will guide you through the process of balancing
+					Yin and Yang, ranging from connecting the sexual power with universal human
+					love to harnessing sexual energy from both male and female.</p>
 				</div>
 		</div>
 	</div>
@@ -220,7 +241,19 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<!-- <div class="col-md-6 agile-info_packages_left1 choose_top"> -->
 			<div class="choose_top">
 				<div>
-				<p>Your energy centers vibrate, and your energy channels are open after more than four days of practices with Master Chia. Now, it is time for advanced meditation that fuses all types of energy inside and outside of your body, and use them to activate your brain. Fusion of Five Elements is one of the best Taoist practices that balance all essential energies in your body, dissolving both psychological conflicts and physiological imbalance. It brings all types of internal energy into harmonious forces and prepares for advanced Qi cultivation and transformation. Also, he teaches you how to use the balanced power to awaken the wisdom of your brain, which is the result of seemingly intuitive brain activities, not the outcome of conventional logic thinking.</p>
+				<p>
+After more than four days of practice with Master Chia, your energy centers
+will be vibrating, and your energy channels will be much more open.\
+Now will be the perfect time for advanced meditation, where you will fuse
+all types of energy, both inside and out of your body, and use them to
+activate your brain.
+Fusion of Five Elements is one of the best Taoist practices that balance
+all essential energies in your body, dissolving both psychological conflicts
+and physiological imbalance. It brings all types of internal energy into
+harmonious focus and prepares for advanced Qi cultivation and transformation.
+Also, he will teach you to use this balanced power to awaken the wisdom
+of your brain, which is the result of seemingly intuitive brain activities,
+not normally the outcome of conventional logic thinking.</p>
 				</div>
 				<div class="col-lg-6 welcome-right">
 					<div class="welcome-right-top">
