--- a/index.html
+++ b/index.html
@@ -189,17 +189,17 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 		<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
 			<div class="choose_top text-center">
-				<p>In this workshop, Master Chia will teach fundamental practices of Taoist meditation.
-					He will guide you through each step and help you activate the internal flow of
-					your life energy, opening up your microcosmic orbit
-					(this inner energy flow radiates and generates healing power inside your body).
-					Afterward, he will lead you back to your body's wisdom which is activated
-					and developed by Inner Smile -- smiling to your organs in the creating cycle.
-					This natural wisdom will make your organs healthy and strong while growing your
-					soul spirit.
-					In addition, he will teach the Six Healing Sounds, which is the emotional wisdom
-					that gives you control of your emotions which would otherwise be difficult
-					to manage.</p>
+<p>In this workshop, Master Chia will teach fundamental practices of Taoist meditation.
+He will guide you through each step and help you activate the internal flow of
+your life energy, opening up your microcosmic orbit
+(this inner energy flow radiates and generates healing power inside your body).
+Afterward, he will lead you back to your body's wisdom which is activated
+and developed by Inner Smile -- smiling to your organs in the creating cycle.
+This natural wisdom will make your organs healthy and strong while growing your
+soul spirit.
+In addition, he will teach the Six Healing Sounds, which is the emotional wisdom
+that gives you control of your emotions which would otherwise be difficult
+to manage.</p>
 			</div>
 		</div>
 	</div>
@@ -213,18 +213,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 		<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
 				<div class="row choose_top text-center">
-					<p>Mantak Chia has been famous for teaching Healing Love for decades
-					since the 1970s.
-					Take this opportunity to learn these practices that were once mysterious from
-					the legendary master,  face-to-face.
-					Love-making or sexual behavior generates tremendous life energy,
-					which ordinary people have no way to control.
-					He will teach you how to manage your sexual power and transform it into
-					incredible healing energy that flows through your body and opens up your
-					sensory nerves and Qi channels.
-					In this workshop, he will guide you through the process of balancing
-					Yin and Yang, ranging from connecting the sexual power with universal human
-					love to harnessing sexual energy from both male and female.</p>
+<p>Mantak Chia has been famous for teaching Healing Love for decades
+since the 1970s.
+Take this opportunity to learn these practices that were once mysterious from
+the legendary master,  face-to-face.
+Love-making or sexual desire and behavior generates tremendous life energy,
+which ordinary people have no way to control.
+He will teach you how to manage your sexual power and transform it into
+incredible healing energy that flows through your body and opens up your
+sensory nerves and Qi channels.
+In this workshop, he will guide you through the process of balancing
+Yin and Yang, ranging from connecting the sexual power with universal human
+love to harnessing sexual energy from both male and female.</p>
 				</div>
 		</div>
 	</div>
