Change image layout.

--- a/index.html
+++ b/index.html
@@ -58,35 +58,19 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav ml-auto text-center mr-xl-5 mt-lg-0 mt-3">
-					<li class="nav-item active mr-lg-2 mb-lg-0 mb-2">
+					<!-- <li class="nav-item mr-lg-2 mb-lg-0 mb-2">
 						<a class="nav-link" href="index.html">Home
 							<span class="sr-only">(current)</span>
 						</a>
+					</li> -->
+					<li class="nav-item mr-lg-2 mb-lg-0 mb-2">
+						<a class="nav-link" href="#">Tickets</a>
 					</li>
 					<li class="nav-item mr-lg-2 mb-lg-0 mb-2">
-						<a class="nav-link" href="ticket.html">Tickets</a>
-					</li>
-					<!-- <li class="nav-item mr-lg-2 mb-lg-0 mb-2">
-						<a class="nav-link" href="about.html">About Us</a>
-					</li> -->
-					<!-- <li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-							aria-expanded="false">
-							Pages
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<a class="dropdown-item" href="about.html">Team</a>
-							<a class="dropdown-item" href="typo.html">Typography</a>
-							<a class="dropdown-item" href="gallery.html">Gallery</a>
-
-						</div>
-					</li> -->
-
-					<li class="nav-item mr-lg-2 mb-lg-0 mb-2">
-						<a class="nav-link" href="resource.html">Resources</a>
+						<a class="nav-link" href="#">Resources</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="contact.html">Contact Us</a>
+						<a class="nav-link" href="#">Contact Us</a>
 					</li>
 				</ul>
 			</div>
@@ -238,13 +222,12 @@ love to harnessing sexual energy from both male and female.</p>
 		<!-- <div class="row about-tp mt-md-5 pt-4"> -->
 		<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
 			<!-- <div class="col-lg-6 welcome-left"> -->
-			<!-- <div class="col-md-6 agile-info_packages_left1 choose_top"> -->
-			<div class="choose_top">
-				<div>
+			<div class="col-md-6 agile-info_packages_left1 choose_top">
+			<!-- <div class="choose_top"> -->
 				<p>
 After more than four days of practice with Master Chia, your energy centers
-will be vibrating, and your energy channels will be much more open.\
-Now will be the perfect time for advanced meditation, where you will fuse
+will be vibrating, and your energy channels will be much more open.
+ Now will be the perfect time for advanced meditation, where you will fuse
 all types of energy, both inside and out of your body, and use them to
 activate your brain.
 Fusion of Five Elements is one of the best Taoist practices that balance
@@ -254,14 +237,15 @@ harmonious focus and prepares for advanced Qi cultivation and transformation.
 Also, he will teach you to use this balanced power to awaken the wisdom
 of your brain, which is the result of seemingly intuitive brain activities,
 not normally the outcome of conventional logic thinking.</p>
-				</div>
-				<div class="col-lg-6 welcome-right">
-					<div class="welcome-right-top">
-						<img src="images/EnergyTao.jpg" alt="" class="img-fluid" width="75%" height="75%">
-					</div>
+			</div>
+			<div class="col-md-6 agile-info_packages_left2">
+				<div class="new_top text-center">
+			<!-- <div class="col-lg-6 welcome-right">
+				<div class="welcome-right-top"> -->
+					<img src="images/EnergyTao.jpg" alt="" class="img-fluid">
 				</div>
 			</div>
-			<!-- <div class="col-lg-6 welcome-right">
+		<!-- <div class="col-lg-6 welcome-right">
 				<div class="welcome-right-top">
 					<img src="images/EnergyTao.jpg" alt="" class="img-fluid">
 				</div>
