--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="col-md-6 agile-info_packages_left2">
 				<div class="new_top text-center">
 					<i class="fas fa-star"></i>
-					<h3 class="mb-3 mt-3">AWAKENING HEALING LIGHT
+					<h3 class="mb-3 mt-3">AWAKENING THE HEALING LIGHT
 					OF THE TAO, BACK TO THE BODY'S WISDOM</h3>
 					<p>Sat Jun 1-Sun Jun 2, 2019</p>
 					<p>9:30am-5:00pm</p>
