Twist banner images.

--- a/index.html
+++ b/index.html
@@ -93,21 +93,21 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="banner-w3ls-3">
 				</div>
 			</li>
-			<li>
+			<li class="prev">
 				<div class="banner-w3ls-4">
 				</div>
 			</li>
-			<li class="prev">
+			<!-- <li class="prev">
 				<div class="banner-w3ls-5">
 				</div>
-			</li>
+			</li> -->
 		</ul>
 		<ul class="pager">
 			<li data-index="0" class="active"></li>
 			<li data-index="1"></li>
 			<li data-index="2"></li>
 			<li data-index="3"></li>
-			<li data-index="4"></li>
+			<!-- <li data-index="4"></li> -->
 		</ul>
 		<div class="banner-text-posi-w3ls">
 			<div class="banner-text-whtree">
