Change order of workshops and seminar.

--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="banner-text-whtree">
 				<h3 class="text-capitalize text-white text-center p-4">With Mantak Chia in Silicon Valley
 				</h3>
-				<h4 class="px-4 py-3 text-center text-white mx-auto">May 31-June 6, 2019. One seminar and three workshops.</h4>
+				<h4 class="px-4 py-3 text-center text-white mx-auto">May 31-June 6, 2019.
+					Three workshops and one seminar.</h4>
 			</div>
 		</div>
 	</div>
