Add introduction seminar.

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="col-md-6 agile-info_packages_left1">
 				<div class="new_top text-center">
 					<i class="fas fa-dot-circle"></i>
-					<h3 class="mb-3 mt-3">INTRODUCTION SEMINAR</h3>
+					<h3 class="mb-3 mt-3"><a href="#seminar">INTRODUCTION SEMINAR</a></h3>
 					<p>Fri May 31, 2019</p>
 					<p>7:00-9:00pm</p>
 				</div>
@@ -137,8 +137,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="col-md-6 agile-info_packages_left2">
 				<div class="new_top text-center">
 					<i class="fas fa-star"></i>
-					<h3 class="mb-3 mt-3">AWAKENING THE HEALING LIGHT
-					OF THE TAO, BACK TO THE BODY'S WISDOM</h3>
+					<h3 class="mb-3 mt-3"><a href="#basics">AWAKENING THE HEALING LIGHT
+					OF THE TAO, BACK TO THE BODY'S WISDOM</a></h3>
 					<p>Sat Jun 1-Sun Jun 2, 2019</p>
 					<p>9:30am-5:00pm</p>
 				</div>
@@ -148,7 +148,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="col-md-6 agile-info_packages_left1">
 				<div class="new_top text-center">
 					<i class="fas fa-heart"></i>
-					<h3 class="mb-3 mt-3">LOVING ENERGY THAT HEALS</h3>
+					<h3 class="mb-3 mt-3"><a href="#healing-love">LOVING ENERGY THAT HEALS</a></h3>
 					<p>Mon Jun 3-Tue Jun 4, 2019</p>
 					<p>9:30am-5:00pm</p>
 				</div>
@@ -157,7 +157,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="new_top text-center">
 					<i class="fas fa-sync-alt"></i>
 					<h3 class="mb-3 mt-3">
-					FUSION OF FIVE ELEMENTS & BRAIN WISDOM</h3>
+					<a href="#fusion">FUSION OF FIVE ELEMENTS & BRAIN WISDOM</a></h3>
 					<p>Wed Jun 5-Thu Jun 6, 2019</p>
 					<p>9:30am-5:00pm</p>
 				</div>
@@ -165,9 +165,33 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 	</div>
 </section>
+
+<section id="seminar" class="choose py-5">
+	<div class="container py-md-4 mt-md-3">
+		<div class="wthree_head_section">
+			<h3 class="w3l_header text-white">Introduction <span class="text-white">Seminar</span></h3>
+		</div>
+		<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
+			<div class="choose_top text-center">
+<p>If you are interested in developing a balanced body and mind,
+if you want to transform your negative or restless emotions into positive energy
+that offers a sense of quiet peace, or if you're going to control and harness
+your sexual desire and power to cultivate vibrating and radiant energy flow,
+then this seminar is for you. Take this opportunity to explore what the
+world-renowned master can offer you through guided meditation practices.
+He will introduce you to the Taoist meditation that will profoundly transform
+your body and mind through balanced physiological and psychological exercises.
+Through this seminar, you will know what you will learn in the following
+three workshops and six days with him.
+</p>
+			</div>
+		</div>
+	</div>
+</section>
+
 <!-- //services -->
 	<!-- choose -->
-<section class="choose py-5">
+<section id="basics" class="choose py-5">
 	<div class="container py-md-4 mt-md-3">
 		<div class="wthree_head_section">
 			<h3 class="w3l_header text-white">Awakening <span class="text-white">the Healing Light of the Tao, Back to the Body's Wisdom</span></h3>
@@ -191,7 +215,7 @@ to manage.</p>
 </section>
 <!-- //choose -->
 <!-- packages -->
-<section class="packages py-5">
+<section id="healing-love" class="packages py-5">
 	<div class="container py-md-4 mt-md-3">
 		<div class="wthree_head_section">
 			<h3 class="w3l_header">Loving <span>Energy that Heals</span></h3>
@@ -215,7 +239,7 @@ love to harnessing sexual energy from both male and female.</p>
 	</div>
 </section>
 <!-- //packages -->
-<section class="testimonials py-5">
+<section id="fusion" class="testimonials py-5">
 	<div class="container py-md-4 mt-md-3">
 		<div class="wthree_head_section">
 			<h3 class="w3l_header text-white">Fusion of <span class="text-white">Five Elements & Brain Wisdom</span></h3>
@@ -228,7 +252,7 @@ love to harnessing sexual energy from both male and female.</p>
 				<p>
 After more than four days of practice with Master Chia, your energy centers
 will be vibrating, and your energy channels will be much more open.
- Now will be the perfect time for advanced meditation, where you will fuse
+Now, will be the perfect time for advanced meditation, where you will fuse
 all types of energy, both inside and out of your body, and use them to
 activate your brain.
 Fusion of Five Elements is one of the best Taoist practices that balance
