Add revised introduction from Jeff.

--- a/index.html
+++ b/index.html
@@ -173,16 +173,19 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 		<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
 			<div class="choose_top text-center">
-<p>If you are interested in developing a balanced body and mind,
-if you want to transform your negative or restless emotions into positive energy
-that offers a sense of quiet peace, or if you're going to control and harness
-your sexual desire and power to cultivate vibrating and radiant energy flow,
-then this seminar is for you. Take this opportunity to explore what the
-world-renowned master can offer you through guided meditation practices.
-He will introduce you to the Taoist meditation that will profoundly transform
-your body and mind through balanced physiological and psychological exercises.
-Through this seminar, you will know what you will learn in the following
-three workshops and six days with him.
+<p>
+If you are interested in developing a balanced body and mind;
+if you desire to transform your negative/restless emotions into
+positive energy accompanied by a sense of quiet peace;
+or, if you wish to harness and control your sexual desire and power in order
+to cultivate a vibrant and radiant energy flow, then this seminar is for you.
+Take this opportunity to explore what the world-renowned master
+can offer you through guided meditation practices.
+Allow him to introduce you to the Taoist meditation that will profoundly
+transform your mind and body by following a balanced regimen of
+psychological and physiological exercises.
+These truths are what you will discover within yourself while attending
+the three workshops with the master.
 </p>
 			</div>
 		</div>
