Use dos2unix to remove ^M carriage return.

--- a/index.html
+++ b/index.html
@@ -194,13 +194,21 @@ the three workshops with the master.
 
 <!-- //services -->
 	<!-- choose -->
-<section id="basics" class="choose py-5">
+<!-- <section id="basics" class="choose py-5">
 	<div class="container py-md-4 mt-md-3">
 		<div class="wthree_head_section">
 			<h3 class="w3l_header text-white">Awakening <span class="text-white">the Healing Light of the Tao, Back to the Body's Wisdom</span></h3>
 		</div>
 		<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
-			<div class="choose_top text-center">
+			<div class="choose_top text-center"> -->
+<section id="healing-love" class="packages py-5">
+		<div class="container py-md-4 mt-md-3">
+			<div class="wthree_head_section">
+				<h3 class="w3l_header">Awakening <span>the Healing Light of the Tao, Back to the Body's Wisdom</span></h3>
+			</div>
+			<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
+					<div class="row choose_top text-center">
+
 <p>In this workshop, Master Chia will teach fundamental practices of Taoist meditation.
 He will guide you through each step and help you activate the internal flow of
 your life energy, opening up your microcosmic orbit
@@ -218,11 +226,17 @@ to manage.</p>
 </section>
 <!-- //choose -->
 <!-- packages -->
-<section id="healing-love" class="packages py-5">
+<!-- <section id="healing-love" class="packages py-5">
 	<div class="container py-md-4 mt-md-3">
 		<div class="wthree_head_section">
 			<h3 class="w3l_header">Loving <span>Energy that Heals</span></h3>
-		</div>
+		</div> -->
+<section id="fusion" class="testimonials py-5">
+		<div class="container py-md-4 mt-md-3">
+			<div class="wthree_head_section">
+				<h3 class="w3l_header text-white">Loving <span class="text-white">Energy that Heals</span></h3>
+			</div>
+
 		<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
 				<div class="row choose_top text-center">
 <p>Mantak Chia has been famous for teaching Healing Love for decades
@@ -242,15 +256,15 @@ love to harnessing sexual energy from both male and female.</p>
 	</div>
 </section>
 <!-- //packages -->
-<section id="fusion" class="testimonials py-5">
+<section id="fusion" class="packages py-5">
 	<div class="container py-md-4 mt-md-3">
 		<div class="wthree_head_section">
-			<h3 class="w3l_header text-white">Fusion of <span class="text-white">Five Elements & Brain Wisdom</span></h3>
+			<h3 class="w3l_header">Fusion of <span>Five Elements & Brain Wisdom</span></h3>
 		</div>
 		<!-- <div class="row about-tp mt-md-5 pt-4"> -->
 		<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
 			<!-- <div class="col-lg-6 welcome-left"> -->
-			<div class="col-md-6 agile-info_packages_left1 choose_top">
+			<div class="col-md-6 agile-info_packages_left1 choose_top_nobox">
 			<!-- <div class="choose_top"> -->
 				<p>
 After more than four days of practice with Master Chia, your energy centers
@@ -267,10 +281,10 @@ of your brain, which is the result of seemingly intuitive brain activities,
 not normally the outcome of conventional logic thinking.</p>
 			</div>
 			<div class="col-md-6 agile-info_packages_left2">
-				<div class="new_top text-center">
+				<div class="new_top_nobox text-center">
 			<!-- <div class="col-lg-6 welcome-right">
 				<div class="welcome-right-top"> -->
-					<img src="images/EnergyTao.jpg" alt="" class="img-fluid">
+					<img src="images/EnergyTao.jpg" alt="" class="img-fluid" width="75%">
 				</div>
 			</div>
 		<!-- <div class="col-lg-6 welcome-right">
