Update ticketing link.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</a>
 					</li> -->
 					<li class="nav-item mr-lg-2 mb-lg-0 mb-2">
-						<a class="nav-link" href="#">Tickets</a>
+						<a class="nav-link" href="https://mantakchia.eventbrite.com">Tickets</a>
 					</li>
 					<li class="nav-item mr-lg-2 mb-lg-0 mb-2">
 						<a class="nav-link" href="#">Resources</a>
@@ -111,7 +111,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</ul>
 		<div class="banner-text-posi-w3ls">
 			<div class="banner-text-whtree">
-				<h3 class="text-capitalize text-white text-center p-4">With Mantak Chia in Silicon Valley
+				<h3 class="text-capitalize text-white text-center p-4">With Mantak Chia in San Francisco
 				</h3>
 				<h4 class="px-4 py-3 text-center text-white mx-auto">May 31-June 6, 2019.
 					Three workshops and one seminar.</h4>
