Change logic to brain.

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ and physiological imbalance. It brings all types of internal energy into
 harmonious focus and prepares for advanced Qi cultivation and transformation.
 Also, he will teach you to use this balanced power to awaken the wisdom
 of your brain, which is the result of seemingly intuitive brain activities,
-not normally the outcome of conventional logic thinking.</p>
+not normally the outcome of conventional brain thinking.</p>
 			</div>
 			<div class="col-md-6 agile-info_packages_left2">
 				<div class="new_top_nobox text-center">
