Fix links and add contact us.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<a class="nav-link" href="#">Resources</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Contact Us</a>
+						<a class="nav-link" href="#contactus">Contact Us</a>
 					</li>
 				</ul>
 			</div>
@@ -201,7 +201,7 @@ the three workshops with the master.
 		</div>
 		<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
 			<div class="choose_top text-center"> -->
-<section id="healing-love" class="packages py-5">
+<section id="basics" class="packages py-5">
 		<div class="container py-md-4 mt-md-3">
 			<div class="wthree_head_section">
 				<h3 class="w3l_header">Awakening <span>the Healing Light of the Tao, Back to the Body's Wisdom</span></h3>
@@ -231,7 +231,7 @@ to manage.</p>
 		<div class="wthree_head_section">
 			<h3 class="w3l_header">Loving <span>Energy that Heals</span></h3>
 		</div> -->
-<section id="fusion" class="testimonials py-5">
+<section id="healing-love" class="testimonials py-5">
 		<div class="container py-md-4 mt-md-3">
 			<div class="wthree_head_section">
 				<h3 class="w3l_header text-white">Loving <span class="text-white">Energy that Heals</span></h3>
@@ -293,6 +293,14 @@ not normally the outcome of conventional logic thinking.</p>
 				</div>
 			</div> -->
 	</div>
+	</div>
+</section>
+
+<section id="contactus" class="packages py-5">
+	<div class="container py-md-4 mt-md-3">
+<p>
+Hosted by <a href="mailto:sahinboydas@gmail.com">Sahin Boydas</a> and <a href="mailto:lamdapro@gmail.com">Lewis Young</a>
+</p>
 	</div>
 </section>
 
